# simplesquirrel

./: .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  Doxyfile  INSTALL.html  INSTALL.md  LICENSE  README.md  SUMMARY.md  appveyor.yml  book.json  examples.cpp  gh-pages.js  gulpfile.js  index.html  package.json  run-doxybook.bat  search_index.json  tests.cpp
.circleci/: config.yml
.vuepress/: config.js
assets/css/: 0.styles.0ee256d8.css  0.styles.3e291351.css  0.styles.e9c13294.css
assets/js/: 10.d62ee96a.js  10.e7a3f3a6.js  11.4009e918.js  11.d9c6c702.js  12.210b0692.js  12.a10337a8.js  13.b2fa4dbb.js  13.fe84f917.js  14.9b7aa430.js  14.cbb739b3.js  15.70f0645f.js  15.e8ab4066.js  16.501ef253.js  16.7b881ea9.js  17.30d992da.js  17.f6b7e3f8.js  18.88831d5d.js  18.d5397867.js  19.16f5a800.js  19.f1f1bc68.js  2.2066ceab.js  2.927fb29f.js  2.e8574878.js  20.0d9f55ce.js  20.bb7b17bd.js  21.72067add.js  21.9df31c08.js  22.35dee447.js  22.bd5f602a.js  23.04a997d6.js  23.fdc73d14.js  24.5072aa32.js  24.9a31f41a.js  25.8de84e63.js  25.f0ba90a6.js  26.2e05b4c7.js  26.e2e3f7d8.js  27.1a83fd15.js  27.af46aeb1.js  28.668cd878.js  (+105 more)
docs/: DOXYGEN_TEMPLATE.md  SUMMARY_TEMPLATE.md  SquirrelBind.html  SquirrelBind.md  SquirrelBind_SqArray.html  SquirrelBind_SqArray.md  SquirrelBind_SqClass.html  SquirrelBind_SqClass.md  SquirrelBind_SqClassWrapper.html  SquirrelBind_SqClassWrapper.md  SquirrelBind_SqClass_Ctor.html  SquirrelBind_SqClass_Ctor.md  SquirrelBind_SqClass_Ctor__T_Args_____.html  SquirrelBind_SqClass_Ctor__T_Args_____.md  SquirrelBind_SqCompileException.html  SquirrelBind_SqCompileException.md  SquirrelBind_SqEnum.html  SquirrelBind_SqEnum.md  SquirrelBind_SqException.html  SquirrelBind_SqException.md  SquirrelBind_SqFunction.html  SquirrelBind_SqFunction.md  SquirrelBind_SqInstance.html  SquirrelBind_SqInstance.md  SquirrelBind_SqLibs.html  SquirrelBind_SqLibs.md  SquirrelBind_SqNotFoundException.html  SquirrelBind_SqNotFoundException.md  SquirrelBind_SqObject.html  SquirrelBind_SqObject.md  SquirrelBind_SqRuntimeException.html  SquirrelBind_SqRuntimeException.md  SquirrelBind_SqScript.html  SquirrelBind_SqScript.md  SquirrelBind_SqTable.html  SquirrelBind_SqTable.md  SquirrelBind_SqTypeException.html  SquirrelBind_SqTypeException.md  SquirrelBind_SqVM.html  SquirrelBind_SqVM.md  (+42 more)
doxygen/: allocators_8hpp.html  allocators_8hpp_source.html  annotated.html  args_8hpp.html  args_8hpp_source.html  array_8hpp.html  array_8hpp_source.html  binding_8hpp.html  binding_8hpp_source.html  class_8hpp.html  class_8hpp_source.html  class_member_enums.html  class_member_functions.html  class_member_typedefs.html  class_member_variables.html  class_members.html  classes.html  classssq_1_1_array.html  classssq_1_1_class.html  classssq_1_1_compile_exception.html  classssq_1_1_enum.html  classssq_1_1_exception.html  classssq_1_1_function.html  classssq_1_1_instance.html  classssq_1_1_libs.html  classssq_1_1_not_found_exception.html  classssq_1_1_object.html  classssq_1_1_runtime_exception.html  classssq_1_1_script.html  classssq_1_1_sq_weak_ref.html  classssq_1_1_table.html  classssq_1_1_type_exception.html  classssq_1_1_v_m.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fee7a320e28567a6c771edcbc783b622.html  enum_8hpp.html  enum_8hpp_source.html  enumerations.html  exceptions_8hpp.html  exceptions_8hpp_source.html  (+35 more)
examples/: CMakeLists.txt  example_arrays.cpp  example_arrays.nut  example_classes.cpp  example_classes.nut  example_enums.cpp  example_enums.nut  example_functions.cpp  example_functions.nut  example_tables.cpp  example_tables.nut
include/: simplesq.hpp
include/simplesquirrel/: allocators.hpp  args.hpp  array.hpp  binding.hpp  class.hpp  enum.hpp  exceptions.hpp  function.hpp  instance.hpp  object.hpp  script.hpp  simplesquirrel.hpp  table.hpp  type.hpp  vm.hpp
include/squirrelbind/: allocators.hpp  args.hpp  array.hpp  binding.hpp  class.hpp  enum.hpp  exceptions.hpp  function.hpp  instance.hpp  object.hpp  script.hpp  squirrelbind.hpp  table.hpp  type.hpp  vm.hpp
source/: args.cpp  array.cpp  class.cpp  enum.cpp  function.cpp  instance.cpp  object.cpp  script.cpp  table.cpp  vm.cpp
tests/: CMakeLists.txt  classes.cpp  functions.cpp  hello_world.cpp  objects.cpp
